<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"

    >
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_wind"
        android:orderInCategory="100"
        android:title="@string/wind"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_time"
        android:orderInCategory="200"
        android:title="@string/time"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemButtonOfSettings"
        android:orderInCategory="300"
        android:title="@string/action_old_settings"
        android:checkable="true"
         />

</menu>