<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentListOfCity">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"


        android:orientation="horizontal"

        >

        <TextView
            style="@style/styleOfListTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sity" />

        <TextView
            style="@style/styleOfListTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature" />

        <TextView
            style="@style/styleOfListTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"

            />

        <TextView
            style="@style/styleOfListTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wetness"

            />


<!--        <Button-->
<!--            android:id="@+id/go_to_browser"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Go to browser"-->
<!--            android:layout_gravity="center"-->

<!--            />-->

<!--        <Button-->
<!--            android:id="@+id/create_sms"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Sms"-->
<!--            android:layout_gravity="center"-->

<!--            />-->
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>